--- a/src/app/views/security/roles.component.html
+++ b/src/app/views/security/roles.component.html
@@ -9,88 +9,68 @@
     </div>
 </div>
 
-<div class="wrapper wrapper-content animated fadeInRight">
+<div class="wrapper wrapper-content">
   <div class="row">
     <div class="col-lg-12">
       <div class="ibox float-e-margins">
         <div class="ibox-title">
-          <iboxtools></iboxtools>
+          <iboxindex #ibox>
+            <div class="custom-ibox-tools">
+              <my-dropdown *ngIf="ShowDropdown==true">
+                <ul class="dropdown-menu dropdown-menu-right dopdown-list">
+                  <li>
+                    <a>Editar</a>
+                  </li>
+                </ul> 
+              </my-dropdown>
+              <a>
+                <i class="fa fa-plus"></i>
+              </a>
+              <a class="filter" (click)="ibox.colapseFilter($event)">
+                <i class="fa fa-filter"></i>
+              </a>
+              <a class="close-link">
+                <i class="fa fa-refresh" (click)="dt.onReload()"></i>
+              </a> 
+            </div>
+          </iboxindex>
         </div>
         <div class="ibox-content">
+          <div id="user-filter" class="form-filter">
+              <form id="filterForm" autocomplete="off">
+                <div class="row">                    
+                </div>
+              </form>
+            <div class="hr-line-dashed"></div>
+          </div>
           <div class="row">
-            <div class="col-xs-2">
-              <label class="label-control">Filas por p&aacute;gina</label>
-              <select class="form-control input-sm" [(ngModel)]="rowsOnPage">
-                <option [ngValue]="2">2</option>
-                <option [ngValue]="5">5</option>
-                <option [ngValue]="10">10</option>
-                <option [ngValue]="15">15</option>
-              </select>
-            </div>
-            <div class="col-xs-4">
-              <div class="row">
-                <label class="col-xs-12 label-control">Ordenar por</label>
-              </div>
-              <div class="col-xs-6">
-                <div class="row">
-                  <select class="form-control input-sm" [(ngModel)]="sortBy">
-                    <option ngValue="id">ID</option>
-                    <option ngValue="descripcion">Descripcion</option>
-                    <option ngValue="descripcion_corta">Descripcion Corta</option>
-                    <option ngValue="type">Alias</option>
-                    <!--<option [ngValue]="sortByWordLength">City</option>-->
-                  </select>
-                </div>
-              </div>
-              <div class="col-xs-6">
-                <div class="row">
-                  <select class="form-control input-sm" [(ngModel)]="sortOrder">
-                    <option ngValue="asc">Ascendiente</option>
-                    <option ngValue="desc">Descendiente</option>
-                    <option ngValue="badValue">Bad value</option>
-                  </select>
-                </div>
-              </div>
+            <div class="col-lg-12" style="position: relative">
+              <mydatatables-ajax #dt [url]="url" [filter]="filter" [columns]="columns" (key)="onShowDropdown($event)">
+              </mydatatables-ajax>
             </div>
           </div>
-          <table class="table table-striped">
-          <!--<table class="table table-striped" [mfData]="data" #mf="mfDataTable"
-                  [mfRowsOnPage]="rowsOnPage" [(mfSortBy)]="sortBy" [(mfSortOrder)]="sortOrder" cellspacing="0">-->
-                  <!--| secFilter : filterQuery-->
-            <thead>
-              <tr>
-                <th>ID</th>
-                <th>Descripci&oacute;n</th>
-                <th>Descripci&oacute;n Corta</th>
-                <th>Alias</th>
-                <th></th>
-              </tr>
-              <!--<tr>
-                <th colspan="5">
-                  Filter by name:
-                  <input class="form-control" [(ngModel)]="filterQuery"/>
-                </th>
-              </tr>-->
-            </thead>
-            <tbody>
-              <tr *ngFor="let item of data">
-                <td>{{item.id}}</td>
-                <td>{{item.descripcion}}</td>
-                <td>{{item.descripcion_corta}}</td>
-                <td>{{item.type | uppercase}}</td>
-                <td><button class="btn btn-success btn-xs">Editar</button></td>
-              </tr>
-            </tbody>
-            <tfoot>
-              <tr>
-                <td colspan="5">
-                  <!--<mfBootstrapPaginator [rowsOnPageSet]="[5,10,15]"></mfBootstrapPaginator>-->
-                </td>
-              </tr>
-            </tfoot>
-          </table>
         </div>
       </div>
     </div>
   </div>
 </div>
+
+<ng-template #template>
+    <div class="modal-header">
+        <h4 class="modal-title pull-left" *ngIf="SN_Create==true">Crear Rol</h4>
+        <h4 class="modal-title pull-left" *ngIf="SN_Create==false">Editar Rol</h4>
+        <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+        <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        <div class="row">
+            <roles-maintenance [roleId]="'1'" #maintenance>
+            </roles-maintenance>
+        </div>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-primary">Guardar</button>
+        <button type="button" class="btn btn-default" (click)="modalRef.hide()">Cerrar</button>
+    </div>
+</ng-template>
