--- a/src/app/views/security/user.component.html
+++ b/src/app/views/security/user.component.html
@@ -9,7 +9,7 @@
     </div>
 </div>
 
-<div class="wrapper wrapper-content animated fadeInRight">
+<div class="wrapper wrapper-content">
   <div class="row">
     <div class="col-lg-12">
       <div class="ibox float-e-margins">
@@ -62,7 +62,7 @@
               </div>
             </form>
             <div class="hr-line-dashed"></div>
-          </div>    
+          </div> 
           <div class="row">
             <div class="col-lg-12" style="position: relative">
               <mydatatables-ajax #dt [url]="url" [filter]="filter" [columns]="columns" (key)="onShowDropdown($event)">
